2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am:
	* lunar-launcher.cpp:
	* lunar-downloader.cpp|h: Remove LunarDownloader, it's no longer needed now
	the curl bridge is the default and available for oob too.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* lunar-launcher.cpp: Fix compiler warning.

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* lunar-launcher.cpp (add_mono_config): we need to do the same
	thing the plugin does for setting up the dllmaps here since we
	can't use System.Windows.dll.config.

2010-05-12  Chris Toshok  <toshok@ximian.com>
	* lunar-launcher.cpp (load_app): pull the installer
	service/apprecord logic out of here, and put it..
	(create_window): .. here so we can get at the origin host, which
	goes in the window's titlebar.

2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* lunar-launcher.cpp: gtk_main needs to be surrounded by
	gtk_threads_enter/leave, and we also need to keep processing events/timeouts
	before exiting to do a proper shutdown, since our shutdown sequence is async.

2010-04-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* lunar-downloader.cpp|h: Update according to DownloaderRequest api changes.

2010-04-27  Jeffrey Stedfast  <fejj@novell.com>

	* lunar-downloader.cpp|h: New source files for wrapping the curl
	downloader.

	* lunar-launcher.cpp: Get rid of the FileDownloadState and load
	the curl bridge instead.

2010-04-27  Jeffrey Stedfast  <fejj@novell.com>

	* lunar-launcher.cpp (create_window): Add an event handler for
	Surface::ErrorEvent so that we can get some sort of error printed
	to the console when something fails.

2010-04-26  Jeffrey Stedfast  <fejj@novell.com>

	* lunar-launcher.cpp: Rewritten to not use gtkmozembed at all.

2010-04-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am:
	* lunar-launcher.cpp|h: Added. Based heavily on agviewer.
