@@ -94,6 +94,8 @@ G_END_DECLS
 #define LOG_DEMUXERS(...)		if (G_UNLIKELY (debug_flags & RUNTIME_DEBUG_DEMUXERS)) printf (__VA_ARGS__);
 #define LOG_MP4(...)			if (G_UNLIKELY (debug_flags & RUNTIME_DEBUG_MP4)) printf (__VA_ARGS__);
 #define LOG_EFFECT(...)			if (G_UNLIKELY (debug_flags & RUNTIME_DEBUG_EFFECT)) printf (__VA_ARGS__);
+#define LOG_OOB(...)			if (G_UNLIKELY (debug_flags & RUNTIME_DEBUG_OOB)) printf (__VA_ARGS__);
+
 #else
 
 #define LOG_ALSA(...)
@@ -136,6 +138,7 @@ G_END_DECLS
 #define LOG_DEMUXERS(...)
 #define LOG_MP4(...)
 #define LOG_EFFECT(...)
+#define LOG_OOB(...)
 
 #endif /* LOGGING */
 
