@@ -133,6 +133,7 @@ enum RuntimeDebugFlag {
 	RUNTIME_DEBUG_DEMUXERS          = 1 << 28,
 	RUNTIME_DEBUG_MP4               = 1 << 29,
 	RUNTIME_DEBUG_EFFECT            = 1 << 30,
+	RUNTIME_DEBUG_OOB               = 1 << 31,
 };
 
 enum RuntimeDebugExtraFlag {
