@@ -1,3 +1,7 @@
+2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* lunar-launcher.cpp: Add debug spew.
+
 2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* Makefile.am:
